# umbrella

./: .gitignore  LICENSE  README.md  pyproject.toml  umbrella.py
src/: action.sh  properties.py  task.py  umbrella.py
src/umbrella/: command_provider.py  git_backup_action.py  logger.py  path_utils.py  properties.py  task.py  task_provider.py  umbrella.py
src/umbrella/changechecker/: abstract_change_checker.py  change_checker.py  folder_checksum_repository.py  md5_change_checker.py  mock_change_checker.py
