[tool.poetry]
name = "umbrella"
version = "0.1.0"
description = "App to help backup your data"
authors = ["Yuriy Titov <yurtitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
python-crontab = "^3.0.0"
pyyaml = "^6.0.1"
checksumdir = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
